src/objects/bofc__BOFCFieldsAnalyzerResult__c.object
<CustomObject>
    <fields>
        <fullName>bofc__BOFCFieldsAnalyzer__c</fullName>
        <label>BOFCFieldsAnalyzer</label>
        <referenceTo>bofc__BOFCFieldsAnalyzer__c</referenceTo>
        <relationshipLabel>BOFCFieldsAnalyzerResult</relationshipLabel>
        <relationshipName>BOFCFieldsAnalyzerResult</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bofc__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Populated_On_Percent__c</fullName>
        <formula>VALUE(
IF(bofc__BOFCFieldsAnalyzer__r.bofc__Records__c = 0, &quot;&quot;, TEXT(bofc__Populated_On__c / bofc__BOFCFieldsAnalyzer__r.bofc__Records__c) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Populated On (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>bofc__Populated_On__c</fullName>
        <label>Populated_On</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bofc__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>anytype</fullName>
                </value>
                <value>
                    <fullName>base64</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Combobox</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>MultiPicklist</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>TextArea</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bofc__isCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCustom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__isRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>BOFCFieldsAnalyzerResult</label>
    <nameField>
        <label>BOFCFieldsAnalyzer	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCFieldsAnalyzerResult</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>